# Perception

./: .gitignore  LICENSE  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: compliance.yml
deployment/: DockerFile  Dockerfile  ros_docker.sh
src/lidar/algo/detection/python/: filters_algo.py  full_detection_block.py
src/lidar/readers/python/: pcl_reader.py
src/lidar/visualizers/: o3d_visualizer.py  visualizers.py
src/perception/: package.xml  setup.cfg  setup.py
src/perception/launch/: PCLPipeline.launch.py
src/perception/perception/lidar/readers/python/: device_reader.py
src/perception/perception/nodes/: PCLDetectionNode.py  PCLPreprocessingNode.py
src/perception/perception/utils/: pc2_npy.py
src/ros/src/perception/: package.xml  setup.py
src/ros/src/perception/perception/lidar/algo/calibration/python/: auto_calibration.py
src/ros/src/perception/perception/lidar/algo/detection/python/: filters_algo.py  full_detection_block.py
src/ros/src/perception/perception/lidar/readers/python/: device_reader.py  record_reader.py
src/ros/src/perception/perception/nodes/: PCLDetectionNode.py  PCLPreprocessingNode.py  PCLRecordingReadNode.py
src/ros/src/perception/perception/utils/: pc2_npy.py
utils/: invz_to_CSV.py  invz_to_npz.py  om_config.json
